# rpmspectool

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  rpmspectool.py  rpmspectool.py.in  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
rpmspectool/: cli.py  download.py  i18n.py  rpm.py  version.py  version.py.in
scripts/: rpmspectool
shell-completions/bash/: rpmspectool
tests/: conftest.py  test_cli.py  test_download.py  test_i18n.py  test_rpm.py  test_version.py  util.py
tests/test-data/: test1.expected  test1.spec  test2.expected  test2.spec
