[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rpmspectool"
version = "1.99.7"
description = "List and download sources and patches in RPM spec files"
authors = ["Nils Philippsen <nils@tiptoe.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
include = [
    { path = "COPYING", format = "sdist" },
    { path = "shell-completions/*/*", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.11"
argcomplete = "^1.11.1 || ^2"
pycurl = "^7.43.0.5"

[tool.poetry.scripts]
rpmspectool = " rpmspectool.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^6 || ^7"
pytest-cov = "^4"

[tool.black]
line_length = 100

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 100
target-version = "py37"
allowed-confusables = ["’"]
