[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpmspectool"
version = "1.99.10"
description = "List and download sources and patches in RPM spec files"
license = "GPL-3.0-or-later"
authors = [{name = "Nils Philippsen", email = "nils@tiptoe.de"}]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "argcomplete<4.0,>=1.11.1",
    "pycurl<8.0,>=7.43.0.5",
]

[project.scripts]
rpmspectool = "rpmspectool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rpmspectool"]

[tool.hatch.build.targets.sdist]
include = [
    "COPYING",
    "rpmspectool/**/*.py",
    "shell-completions/**/*",
    "tests/**/*.py",
    "tests/test-data/*.spec",
    "tests/test-data/*.expected",
]

[dependency-groups]
test = [
    "coverage<8,>=7",
    "pytest<9,>=6",
    "pytest-cov<8,>=4",
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=rpmspectool --cov-report=xml --cov-report=term --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
allowed-confusables = ["’"]
